Sistemas Operativos/iptables
# Generated by iptables-save v1.4.21 on Fri Sep 22 15:41:25 2023
*nat
:PREROUTING ACCEPT [147:13884]
:INPUT ACCEPT [4:248]
:OUTPUT ACCEPT [13:932]
:POSTROUTING ACCEPT [13:932]
:OUTPUT_direct - [0:0]
:POSTROUTING_ZONES - [0:0]
:POSTROUTING_ZONES_SOURCE - [0:0]
:POSTROUTING_direct - [0:0]
:POST_public - [0:0]
:POST_public_allow - [0:0]
:POST_public_deny - [0:0]
:POST_public_log - [0:0]
:PREROUTING_ZONES - [0:0]
:PREROUTING_ZONES_SOURCE - [0:0]
:PREROUTING_direct - [0:0]
:PRE_public - [0:0]
:PRE_public_allow - [0:0]
:PRE_public_deny - [0:0]
:PRE_public_log - [0:0]
-A PREROUTING -j PREROUTING_direct
-A PREROUTING -j PREROUTING_ZONES_SOURCE
-A PREROUTING -j PREROUTING_ZONES
-A OUTPUT -j OUTPUT_direct
-A POSTROUTING -j POSTROUTING_direct
-A POSTROUTING -j POSTROUTING_ZONES_SOURCE
-A POSTROUTING -j POSTROUTING_ZONES
-A POSTROUTING_ZONES -o enp0s3 -g POST_public
-A POSTROUTING_ZONES -g POST_public
-A POST_public -j POST_public_log
-A POST_public -j POST_public_deny
-A POST_public -j POST_public_allow
-A PREROUTING_ZONES -i enp0s3 -g PRE_public
-A PREROUTING_ZONES -g PRE_public
-A PRE_public -j PRE_public_log
-A PRE_public -j PRE_public_deny
-A PRE_public -j PRE_public_allow
COMMIT
# Completed on Fri Sep 22 15:41:25 2023
# Generated by iptables-save v1.4.21 on Fri Sep 22 15:41:25 2023
*mangle
:PREROUTING ACCEPT [356:43153]
:INPUT ACCEPT [355:42815]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [208:44404]
:POSTROUTING ACCEPT [208:44404]
:FORWARD_direct - [0:0]
:INPUT_direct - [0:0]
:OUTPUT_direct - [0:0]
:POSTROUTING_direct - [0:0]
:PREROUTING_ZONES - [0:0]
:PREROUTING_ZONES_SOURCE - [0:0]
:PREROUTING_direct - [0:0]
:PRE_public - [0:0]
:PRE_public_allow - [0:0]
:PRE_public_deny - [0:0]
:PRE_public_log - [0:0]
-A PREROUTING -j PREROUTING_direct
-A PREROUTING -j PREROUTING_ZONES_SOURCE
-A PREROUTING -j PREROUTING_ZONES
-A INPUT -j INPUT_direct
-A FORWARD -j FORWARD_direct
-A OUTPUT -j OUTPUT_direct
-A POSTROUTING -j POSTROUTING_direct
-A PREROUTING_ZONES -i enp0s3 -g PRE_public
-A PREROUTING_ZONES -g PRE_public
-A PRE_public -j PRE_public_log
-A PRE_public -j PRE_public_deny
-A PRE_public -j PRE_public_allow
COMMIT
# Completed on Fri Sep 22 15:41:25 2023
# Generated by iptables-save v1.4.21 on Fri Sep 22 15:41:25 2023
*security
:INPUT ACCEPT [213:29517]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [208:44404]
:FORWARD_direct - [0:0]
:INPUT_direct - [0:0]
:OUTPUT_direct - [0:0]
-A INPUT -j INPUT_direct
-A FORWARD -j FORWARD_direct
-A OUTPUT -j OUTPUT_direct
COMMIT
# Completed on Fri Sep 22 15:41:25 2023
# Generated by iptables-save v1.4.21 on Fri Sep 22 15:41:25 2023
*raw
:PREROUTING ACCEPT [356:43153]
:OUTPUT ACCEPT [208:44404]
:OUTPUT_direct - [0:0]
:PREROUTING_ZONES - [0:0]
:PREROUTING_ZONES_SOURCE - [0:0]
:PREROUTING_direct - [0:0]
:PRE_public - [0:0]
:PRE_public_allow - [0:0]
:PRE_public_deny - [0:0]
:PRE_public_log - [0:0]
-A PREROUTING -j PREROUTING_direct
-A PREROUTING -j PREROUTING_ZONES_SOURCE
-A PREROUTING -j PREROUTING_ZONES
-A OUTPUT -j OUTPUT_direct
-A PREROUTING_ZONES -i enp0s3 -g PRE_public
-A PREROUTING_ZONES -g PRE_public
-A PRE_public -j PRE_public_log
-A PRE_public -j PRE_public_deny
-A PRE_public -j PRE_public_allow
COMMIT
# Completed on Fri Sep 22 15:41:25 2023
# Generated by iptables-save v1.4.21 on Fri Sep 22 15:41:25 2023
*filter
:INPUT ACCEPT [3:241]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1:71]
-A INPUT -s 192.168.1.84/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.1.85/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.1.86/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.1.87/32 -p tcp -m tcp --dport 22 -j ACCEPT
COMMIT
# Completed on Fri Sep 22 15:41:25 2023
